--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IGOR\\MYSERVER;Database=gopr-service;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-JMV89FI;Database=gopr-service;Trusted_Connection=True;"
   }
 }
